# AAA-surya-PoC

./: .gitignore  README.md  pyproject.toml  tasks.py
results/14 - DOC-AFF/: 14-DOC-AFF Affidavit17-21-1220-4957_2024_15561.json  14-DOC-AFF Affidavit17-23-1308-1263_2024_153024.json  14-DOC-AFF Affidavit41-21-1230-6201_2024_16160.json  14-DOC-AFF Affidavit41-22-1240-6399_2024_152821.json  14-DOC-AFF Affidavit41-22-1273-4981_2024_17134.json  14-DOC-AFF Affidavit41-23-1299-5106_2024_155028.json
results/17 - DOC-PRV/: 17-DOC-P.json  17-DOC-PRV License&Business Ops Docs17-2.json  17-DOC-PRV License&Business Ops Docs17-20-1184-2765_2024_132013.json  17-DOC-PRV License&Business Ops Docs17-21-1190-3704_2024_125152.json  17-DOC-PRV License&Business Ops Docs17-21-1195-6032_2024_91327.json  17-DOC-PRV License&Business Ops Docs17-21-1209-5836_2024_994.json  17-DOC-PRV License&Business Ops Docs17-21-1215-0493_2024_12574.json  17-DOC-PRV License&Business Ops Docs17-21-1219-2858_2024_993.json  17-DOC-PRV License&Business Ops Docs17-21-1219-6532_2024_9312.json  17-DOC-PRV License&Business Ops Docs17-21-1220-8823_2024_132525.json  17-DOC-PRV License&Business Ops Docs17-21-1221-6623_2024_124642.json  17-DOC-PRV License&Business Ops Docs17-21-1223-1913_2024_9817.json  17-DOC-PRV License&Business Ops Docs17-21-1228-5049_2024_132025.json  17-DOC-PRV License&Business Ops Docs17-22-1239-2211_2024_132022.json  17-DOC-PRV License&Business Ops Docs17-22-1240-7329_2024_12576.json  17-DOC-PRV License&Business Ops Docs17-22-1240-7806_2024_13107.json  (+60 more)
src/surya_exploratory/: __init__.py  ocr.py
(+24 files in other folders)
